# dsp_ding2

./: README.md
dsp_ws/: README.md  catkin.sh  voice.sh
dsp_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
dsp_ws/devel/include/blinky/: FaceAction.h  FaceActionFeedback.h  FaceActionGoal.h  FaceActionResult.h  FaceFeedback.h  FaceGoal.h  FaceResult.h
dsp_ws/devel/include/dspbot_tools/: CalibrateAngularConfig.h  CalibrateLinearConfig.h
dsp_ws/devel/include/exploration_msgs/: ExploreAction.h  ExploreActionFeedback.h  ExploreFeedback.h  (+6 more)
dsp_ws/msc/457e2884e0172f4890be628e5d8b44cc/: cfg.ldata  u.data  urec.data
dsp_ws/src/dspbot/: README.md
dsp_ws/src/dspbot/dspbot_tools/: CMakeLists.txt  package.xml  setup.py
dsp_ws/src/dspbot/dspbot_tools/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg
dsp_ws/src/dspbot/dspbot_tools/launch/: joystick_teleop.launch
dsp_ws/src/dspbot/dspbot_tools/scripts/: calibrate_angular.py  calibrate_linear.py  check_angular.py  check_linear.py  listener_1.py  listener_1_1.py  listener_2.py  listener_new_arm.py  talker.py  talker_1.py
dsp_ws/src/dspbot/dspbot_tools/startup/: initenv.sh
dsp_ws/src/dspbot/dspbot_vision/: CMakeLists.txt  package.xml
dsp_ws/src/dspbot/dspbot_vision/launch/: Testcolor.launch  camshift.launch  cv_bridge_demo.launch  face_tracker.launch  face_tracker2.launch  follower.launch  follower2.launch  follower3.launch  good_features.launch  object_follower.launch  object_tracker.launch  ros2opencv2.launch
dsp_ws/src/dspbot/dspbot_vision/nodes/: Testcolor.py  camshift.py  cv_bridge_demo (复件).py  cv_bridge_demo.py  face_tracker.py  face_tracker2.py  follower.py  follower2.py  object_follower.py  object_tracker.py
dsp_ws/src/dspbot/dspbot_vision/src/dspbot_vision/: face_detector.py  good_features.py  lk_tracker.py  ros2opencv2.py  ros2opencv2_3.py  ros2opencv2_cp.py
(+422 files in other folders)
